Implémentation T.U. SpecificRequestController.