@@ -9,6 +9,7 @@ import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 
+import java.util.Collections;
 import java.util.List;
 
 /**
@@ -35,7 +36,7 @@ public class CommunityEmailService {
 
         if (persons.isEmpty()) {
             log.error("No Resident found for city : '{}'.", city);
-            return List.of();
+            return Collections.emptyList();
         }
 
         List<PersonCommunityEmailDTO> personCommunityEmailDTOS = persons.stream()
